# med-merge

./: .gitignore  README.md  pyproject.toml
CS_229_Project_Milestone/: cs229-final-paper.tex  reference.bib
configs/: defaults.yaml
configs/datasets/: chexpert.yaml  isic2017.yaml  nih_cxr.yaml  pathmnist.yaml  retinamnist.yaml  tcga.yaml
configs/evaluation/: default.yaml
configs/merging/: dare.yaml  dare_ties.yaml  fisher.yaml  lines.yaml  pcb_merging.yaml  simple_avg.yaml  slerp.yaml  task_arithmetic.yaml  ties.yaml
configs/training/: chexpert.yaml  default.yaml  isic2017.yaml  nih_cxr.yaml  tcga.yaml
scripts/: compile_calibration_table.py  compute_geometry.py  compute_oracle_router.py  evaluate_mtl.py  fisher_norm_check.py  isic_vs_tcga_geometry.py  lobo_stats.py  make_figures_pooled.py  make_lobo_figure.py  per_layer_orthogonality.py  plot_cosine_analysis.py  predict_forgetting_lobo.py  predict_tcga_f1.py  screening_ablation.py  three_domain_analysis.py
slurm/: analysis.sh  full_benchmark.sh  launch_phase_b.sh  medmnist_download.sh  mtl_train.sh  mtl_tune.sh  oracle_router.sh  research_benchmark.sh  setup.sh  smoke_test.sh
src/med_merge/: __init__.py  __main__.py  cli.py  pipelines.py
src/med_merge/analysis/: __init__.py  conflict.py  diagnostics.py  importance.py  visualization.py
src/med_merge/config/: __init__.py  constants.py  loader.py  schema.py
src/med_merge/data/: __init__.py  base.py  chexpert.py  download.py  isic2017.py  medmnist_loader.py  nih_cxr.py  registry.py  splits.py  tcga.py  transforms.py
src/med_merge/evaluation/: metrics.py  (+7 more)
(+32 files in other folders)
